--- a/s3update.yml
+++ b/s3update.yml
@@ -5,9 +5,9 @@
   tasks:
   - name: Update S3 code bucket
     command: aws s3 sync /var/www/html/ s3://{{ s3code }}/ --delete
-  - shell: echo "define('WP_SITEURL','http://{{ devian }}');"  >> wp-config.php
+  - shell: echo "define('WP_SITEURL','http://54.91.69.153');"  >> wp-config.php
     args:
       chdir: /var/www/html/
-  - shell: echo "define('WP_HOME','http://{{ devian }}');"  >> wp-config.php
+  - shell: echo "define('WP_HOME','http://54.91.69.153');"  >> wp-config.php
     args:
       chdir: /var/www/html/
